tests/rgs/syntax_errors/during_missing_phase.rgs
STORY DEFAULT.
    AGENT Guard:
        ACTION patrol.
        EVENT idle MYSELF.
        DURING:
            WHEN idle MYSELF:
                DO patrol.
